Buscando Datos desde HttpCliente

--- a/MonkeyFinder/View/MainPage.xaml
+++ b/MonkeyFinder/View/MainPage.xaml
@@ -4,7 +4,9 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:model="clr-namespace:MonkeyFinder.Model"
-    Title="MainPage">
+    xmlns:viewModel="clr-namespace:MonkeyFinder.ViewModel"
+    Title="{Binding Title}"
+    x:DataType="viewModel:MonkeyViewModel">
 
     <CollectionView>
         <CollectionView.ItemsSource>
