--- a/MonkeyFinder/View/MainPage.xaml
+++ b/MonkeyFinder/View/MainPage.xaml
@@ -8,45 +8,68 @@
     Title="{Binding Title}"
     x:DataType="viewModel:MonkeyViewModel">
 
-    <CollectionView>
-        <CollectionView.ItemsSource>
-            <x:Array Type="{x:Type model:Monkey}">
-                <model:Monkey
-                    Name="Baboom"
-                    Image="https://raw.githubusercontent.com/jamesmontemagno/app-monkeys/master/baboon.jpg"
-                    Location="Africa"
-                    Population="200" />
-                <model:Monkey
-                    Name="Capuchin Monkey"
-                    Image="https://raw.githubusercontent.com/jamesmontemagno/app-monkeys/master/capuchin.jpg"
-                    Location="America"
-                    Population="150" />
-                <model:Monkey
-                    Name="Red-shanked duc"
-                    Image="https://raw.githubusercontent.com/jamesmontemagno/app-monkeys/master/bluemonkey.jpg"
-                    Location="Dom Republic"
-                    Population="210" />
-            </x:Array>
-        </CollectionView.ItemsSource>
+    <Grid ColumnDefinitions="*,*"
+          ColumnSpacing="5"
+          RowDefinitions="*,Auto">
 
-        <CollectionView.ItemTemplate>
-            <DataTemplate x:DataType="model:Monkey">
-                <HorizontalStackLayout Padding="5">
-                    <Image
-                        HeightRequest="100"
-                        Source="{Binding Image}"
-                        WidthRequest="100" />
-                    <VerticalStackLayout
-                        Padding="10"
-                        Spacing="4"
-                        VerticalOptions="Center">
-                        <Label FontSize="25" Text="{Binding Name}" />
-                        <Label FontSize="20" Text="{Binding Location}" />
-                    </VerticalStackLayout>
-                </HorizontalStackLayout>
-            </DataTemplate>
-        </CollectionView.ItemTemplate>
+        <CollectionView
+            Grid.ColumnSpan="2"
+            BackgroundColor="Transparent"
+            ItemsSource="{Binding Monkeys}"
+            SelectionMode="None">
 
-    </CollectionView>
+            <CollectionView.ItemTemplate>
+                <DataTemplate x:DataType="model:Monkey">
+                    <Grid Padding="10">
+                        <Frame HeightRequest="125" Padding="0" Style="{StaticResource CardView }">
+                            <Frame.GestureRecognizers>
+                                <TapGestureRecognizer CommandParameter="{Binding .}"
+                                                      Command="{Binding Source={RelativeSource AncestorType={x:Type viewModel:MonkeyViewModel}}, Path=GoToDetailsCommand}"/>
+                                
+                            </Frame.GestureRecognizers>
+                            
+                            <Grid ColumnDefinitions="125,Auto">
+
+                                <Image Aspect="AspectFill"
+                                       Source="{Binding Image}"
+                                       WidthRequest="125"
+                                       HeightRequest="125"/>
+                                <VerticalStackLayout Grid.Column="1"
+                                                     Padding="10"
+                                                     VerticalOptions="Center">
+                                    
+                                    <Label Text="{Binding Name}"
+                                           Style="{StaticResource LargeLabel}
+"/>
+                                    
+                                    <Label Text="{Binding Location}"
+                                           Style="{StaticResource MediumLabel}"/>
+                                </VerticalStackLayout>
+                            </Grid>
+                            
+                        </Frame>
+                    </Grid>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+            
+        </CollectionView>
+
+        <Button Command="{Binding GetMonkeysCommand}"
+                IsEnabled="{Binding IsNotBusy}" 
+                Grid.Row="1" Grid.Column="0"
+                Text="Get Monkeys" Margin="8"
+                Style="{StaticResource ButtonOutline}"/>
+
+        <Button Grid.Row="1" Grid.Column="1" Text="Exits" Margin="8"
+                Style="{StaticResource ButtonOutline}"/>
+
+        <ActivityIndicator IsVisible="{Binding IsBusy}"
+                           IsRunning="{Binding IsBusy}"
+                           HorizontalOptions="FillAndExpand"
+                           VerticalOptions="CenterAndExpand"
+                           Grid.RowSpan="2"
+                           Grid.ColumnSpan="2"/>
+
+    </Grid>
 
 </ContentPage>
